# liverusty

./: Cargo.toml  README.md  video.sh
src/: main.rs  utilities.rs  vid_mess.rs  wallpapers.rs  youtube.rs
