[package]
name = "liverusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vid2img = "0.1.0"
rustube= "0.4.0"
tokio = { version = "1.19.2", features = ["full"] }
image = "0.24.2"
wallpaper = "3.2.0"